attempt to fix wrong size nugget

--- a/atoms/article/client/css/_nugget.scss
+++ b/atoms/article/client/css/_nugget.scss
@@ -124,6 +124,9 @@ html {
     }
     &__text {
       text-indent: 42px;
+      .nugget-only {
+        display: inline;
+      }
     }
   }
 
